Implement Music Recommender functionality using Last.fm API
- Added MusicRecommenderThread class to handle music recommendations in a separate thread.
- Integrated API calls to fetch artist information and similar tracks based on a liked track.
- Emitted signals for successful recommendations and error handling.
- Utilized PySide6 for threading and signal management.

--- a/ARES_GUI.ui
+++ b/ARES_GUI.ui
@@ -14,17 +14,59 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="Display">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>210</y>
-      <width>31</width>
-      <height>171</height>
+      <x>370</x>
+      <y>180</y>
+      <width>361</width>
+      <height>241</height>
      </rect>
     </property>
     <property name="text">
      <string>PENIS</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Enter_button">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>150</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="User_input">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>100</y>
+      <width>331</width>
+      <height>41</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="testing_gif">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>50</y>
+      <width>241</width>
+      <height>311</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>Assets/testing_gif.gif</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
